--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -20,10 +20,8 @@ jobs:
       - name: Print2
         run: echo ${{ github.event.issue.pull_request }}
       - name: Print2b
-        run: echo ${{ github.event.issue.pull_request && github.event.issue.pull_request.number || github.event.pull_request.number }}
+        run: echo ${{ github.event.issue.pull_request && github.event.issue.number || github.event.pull_request.number }}
       - name: Print2c
-        run: echo ${{ github.event.issue.pull_request.number }}
+        run: echo ${{ github.event.issue.number }}
       - name: Print3
-        run: echo ${{ github.event.pull_request.number }}
-      - name: Print4
         run: echo ${{ github.event.pull_request.number }}
