--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -25,3 +25,5 @@ jobs:
         run: echo ${{ github.event.pull_request.number }}
       - name: Print effective PR number
         run: echo ${{ github.event.issue.number || github.event.pull_request.number }}
+      - name: fail
+        run: exit 2
