--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo ${{ github.event.issue }}
       - name: Print PR
         run: echo ${{ github.event.issue.pull_request }}
-      - name: Print Issue number
+      - name: Print issue number
         run: echo ${{ github.event.issue.number }}
       - name: Print bare PR number
         run: echo ${{ github.event.pull_request.number }}
